                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-11-2006 changed: better logging of failed mplayer attempts
 - 01-11-2006 changed: additional logging for replay-tv filesystem to hopefully figure out why it doesn't work anymore for mplayer.
 - 30-10-2006 changed: memory allocation for dll loader, saves around 100k
 - 30-10-2006 changed: httpapi GuiSetting to accept String type by EQ2K
 - 29-10-2006 changed: now disables navsounds during playback. behaviour can be reverted using advancedsettings.xml
 - 26-10-2006 fixed: [ 1584930 ] useAvpackSettings broken. thanks to markeen.
 - 25-10-2006 fixed: added some thread saneness to the hddsmart query.
 - 25-10-2006 fixed: [ 1580744 ] Can't Get PC DVD-ROM to Work Properly with Xbox Media Centre
 - 25-10-2006 fixed: cosmetic bug in filemanager handling of rar files.
 - 24-10-2006 fixed: .tbn file support for hard drive foldernames containing periods
 - 23-10-2006 fixed: users with bad luck could end up with errors on initial opening dvd images or dvd's (use of uninted variable). likely the start at 90 min in the movie syndrom
 - 23-10-2006 fixed: potential segfault in libdvdnav.dll if a read returned 0 data.
 - 23-10-2006 fixed: segfault in libsmbclient on invalid dates returned in a directory query (lan drives especially)
 - 22-10-2006 added: httpapi QueryMusicDatabase command
 - 22-10-2006 changed: httpapi SetResponseFormat to take multiple format pairs
 - 21-10-2006 fixed: sets Media Source Name if blank for protocols instead of just being blank
 - 20-10-2006 fixed: fixed the python threading exception when exiting a script
 - 18-10-2006 fixed: resume video didn't work if fps adjustment was used for ntsc video's on pal systems